# fibonacci

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dockerignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  coverage.yml  docker-build.yml  lint.yml
app/: api.py  mcp_publish.py  mcp_server.py  streamlit_app.py
services/api/: api.py
services/mcp/: mcp_server.py
services/streamlit/: streamlit_app.py
src/fibonacci/: __init__.py  core.py
src/fibonacci/utils/: datetime_utils.py  finance_utils.py  stats_utils.py
src/utils/: __init__.py  math_utils.py
tests/: conftest.py  test_fibonacci.py  test_utils_datetime.py  test_utils_finance.py  test_utils_math.py  test_utils_stats.py
