[project]
name = "fibonacci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "fastmcp>=3.4.4",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
